unpackaged/main/default/objects/Estado__c/Estado__c.object-meta.xml
<CustomObject>
    <label>Estado</label>
    <nameField>
        <label>Estado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>