unpackaged/main/default/objects/Estado__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código</label>
    <length>5</length>
    <type>Text</type>
</CustomField>