unpackaged/main/default/objects/Estado__c/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>