unpackaged/main/default/objects/Estado__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Estados</relationshipLabel>
    <relationshipName>Estados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>